-Rearranged project orders
-Added still image carousel to student work page
-Renamed Traditional Art to Student Work

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 								<ul>
 <!--									<li><a href="left-sidebar.html">amazon</a></li>-->
 									<li><a href="starwarsgalaxysedge.html">star<b>wars</b>galaxy's<b>edge</b></a></li>
-									<li><a href="legouniverse.html">lego<b>universe</b></a></li>
+									<li><a href="freelanceandfx.html">freelance<b>/fx</b></a></li>
 									<li><a href="jumpgateevolution.html">jumpgate<b>evolution</b></a></li>
 									<li><a href="rallysoftware.html">rally<b>software</b></a></li>
-									<li><a href="traditionalart.html">traditional<b>art</b></a></li>
-									<li><a href="freelanceandfx.html">freelance<b>/fx</b></a></li>
+									<li><a href="legouniverse.html">lego<b>universe</b></a></li>
+									<li><a href="studentwork.html">student<b>work</b></a></li>
 									<!--<li>
 										<a href="#">Projects</a>
 										<ul>
@@ -99,6 +99,11 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style1 middle">
+					<div id="freelance_vfx"></div>
+					<div id="rally_ca"></div>
+					<div id="lego_universe"></div>
+					<div id="jumpgate_evolution"></div>
+					<div id="art"></div>
 					<span class="image fit main"><img src="images/Projects_BG.png" alt="" /></span>
 					<div class="content">
 						<div class="container">
@@ -114,11 +119,12 @@
 <!--										<div class="col-12"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>-->
 <!--										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/Reel_BG.png" alt="" /><p>amazon</p></span></div>-->
 										<div class="col-4 col-6-small"><span class="image fit"><a href="starwarsgalaxysedge.html"><img src="images/SWGE_BG.png" alt="" /><p>star<b>wars<br>galaxy's</b>edge</p></a></span></div>
-										<div class="col-4 col-6-small"><span class="image fit"><a href="legouniverse.html"><img src="images/LU_BG.png" alt="" /><p>lego<b>universe</b></p></a></span></div>
+										<div class="col-4 col-6-small"><span class="image fit"><a href="freelanceandfx.html"><img src="images/FreelanceFX_BG.png" alt="" /><p>freelance<b>/fx</b></p></a></span></div>
 										<div class="col-4 col-6-small"><span class="image fit"><a href="jumpgateevolution.html"><img src="images/JGE_BG.png" alt="" /><p>jumpgate<br><b>evolution</b></p></a></span></div>
-										<div class="col-4 col-6-xsmall"><span class="image fit"><a href="rallysoftware.html"><img src="images/Rally_BG.png" alt="" /><p>rally<b>software</b></p></a></span></div>
-										<div class="col-4 col-6-small"><span class="image fit"><a href="traditionalart.html"><img src="images/Main_BG.png" alt="" /><p>traditional<b>art</b></p></a></span></div>
-										<div class="col-4 col-6-small"><span class="image fit"><a href="freelanceandfx.html"><img src="images/About_BG.png" alt="" /><p>freelance<b>/fx</b></p></a></span></div>
+										<div class="col-4 col-6-small"><span class="image fit"><a href="rallysoftware.html"><img src="images/Rally_BG.png" alt="" /><p>rally<b>software</b></p></a></span></div>
+										<div class="col-4 col-6-small"><span class="image fit"><a href="legouniverse.html"><img src="images/LU_BG.png" alt="" /><p>lego<b>universe</b></p></a></span></div>
+										<div class="col-4 col-6-small"><span class="image fit"><a href="studentwork.html"><img style="height: 6.15em; object-fit: cover" src="images/TraditionalArt_BG.png" alt="" /><p>student<b>work</b></p></a></span></div>
+										
 									</div>
 									</div>
 							</div>
@@ -141,7 +147,7 @@
 									</header>
 								</div>
 								<div class="col-3 col-12-medium">
-									<p>I'm a freelance Video Artist who currently resides with my amazing wife and kids in beautiful Colorado.  I've previously worked for LEGO, NetDevil, and Rally Software as well as Charlex and Quiet Man, two top-tier visual effects comapnies in New York City.  I've also done freelance projects for Amazon, Walt Disney Imagineering, and Backflip Studios.</p>					
+									<p>I'm a freelance Video Artist who currently resides with my amazing wife and kids in beautiful Colorado.  I've previously worked for LEGO, NetDevil, and Rally Software as well as Charlex and Quiet Man, two top-tier visual effects companies in New York City.  I've also done freelance projects for Amazon, Walt Disney Imagineering, and Backflip Studios.</p>					
 								</div>
 								<div class="col-3 col-12-medium">
 									<p>I'm grateful for the variety of projects I've had a chance to work on and I'm excited for whatever the future may hold.  I absolutely love animation and motion graphics and I always welcome the chance to learn and problem solve!</p>
