--- a/jumpgateevolution.html
+++ b/jumpgateevolution.html
@@ -27,11 +27,11 @@
 								<a href="index.html#two" class="goto-next scrolly">projects</a>
 								<ul>
 									<li><a href="starwarsgalaxysedge.html">star<b>wars</b>galaxy's<b>edge</b></a></li>
-									<li><a href="legouniverse.html">lego<b>universe</b></a></li>
+									<li><a href="freelanceandfx.html">freelance<b>/fx</b></a></li>
 									<li><a href="jumpgateevolution.html">jumpgate<b>evolution</b></a></li>
 									<li><a href="rallysoftware.html">rally<b>software</b></a></li>
-									<li><a href="traditionalart.html">traditional<b>art</b></a></li>
-									<li><a href="freelanceandfx.html">freelance<b>/fx</b></a></li>
+									<li><a href="legouniverse.html">lego<b>universe</b></a></li>
+									<li><a href="studentwork.html">student<b>work</b></a></li>
 								</ul>
 							</li>
 							<li><a href="index.html#three" class="goto-next scrolly">about<b>me</b></a></li>
@@ -71,9 +71,9 @@
 								<p>One of the earlier trailers I worked on was a teaser for the "Three Nations" in the game; Solrain, Quantar, and Octavius. Taking some inspiration from the Battlestar Galactica revival, I worked in collaboration with NetDevil Coordinator Grace Wong and the NetDevil audio team to capture, edit, and create motion graphics for the trailer.</p>
 								<span class="image right" style="max-width: 30%"><iframe width="16em" src="http://player.vimeo.com/video/563079824?title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe></span>
 								<p>As the game continued to come together it was decided that pre-rendered cinematics were necessary to introduce the story of the game. We planned to create one for each faction, but didn't have the budget to hire an animation studio to create it. Jumpgate Art Director Darrin Klein asked if I could edit and composite the cinematics while he would provide renders and passes from 3D Studio Max and the NetDevil audio team headed by Richard Dekkard handled the music and voice-over. <span class="image left" style="max-width: 30%"><iframe width="16em" src="http://player.vimeo.com/video/562650494?title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe></span>Unfortunately, Jumpgate was cancelled while we were creating these cinematics, but the most complete were the "Solrain" and "Octavius" ones.</p>			
-								<p>I was so excited to be able to contribute to Jumpgate and I wish that the world could've played the game made by the insanely dedicated and talented Jumpgate team.</p>
-
-							</section>
+							  <p>I was so excited to be able to contribute to Jumpgate and I wish that the world could've played the game made by the insanely dedicated and talented Jumpgate team.</p>
+								<p>&nbsp;</p>
+                            </section>
 
 					</div>
 				</div>
