--- a/studentwork.html
+++ b/studentwork.html
@@ -27,11 +27,11 @@
 								<a href="index.html#two" class="goto-next scrolly">projects</a>
 								<ul>
 									<li><a href="starwarsgalaxysedge.html">star<b>wars</b>galaxy's<b>edge</b></a></li>
-									<li><a href="legouniverse.html">lego<b>universe</b></a></li>
+									<li><a href="freelanceandfx.html">freelance<b>/fx</b></a></li>
 									<li><a href="jumpgateevolution.html">jumpgate<b>evolution</b></a></li>
 									<li><a href="rallysoftware.html">rally<b>software</b></a></li>
-									<li><a href="traditionalart.html">traditional<b>art</b></a></li>
-									<li><a href="freelanceandfx.html">freelance<b>/fx</b></a></li>
+									<li><a href="legouniverse.html">lego<b>universe</b></a></li>
+									<li><a href="studentwork.html">student<b>work</b></a></li>
 								</ul>
 							</li>
 							<li><a href="index.html#three" class="goto-next scrolly">about<b>me</b></a></li>
@@ -58,7 +58,7 @@
 					<span class="image fit main"><img src="images/TraditionalArt_BG.png" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>traditional<b>art</b></h2>
+							<h2>student<b>work</b></h2>
 						</header>
 					</div>
 					<a href="#content" class="goto-next scrolly">Next</a>
@@ -77,6 +77,7 @@
 								<span class="image right" style="max-width: 30%"><iframe style="height: 12em" src="http://player.vimeo.com/video/563074345?title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe></span>
 								<p>In June 2006, after graduation, I was given the opportunity to provide a video accompaniment to a new music piece written by composer Andrew Drannon titled ‘Providence’. To create the piece I appropriated and edited public domain assembly line footage into a new media accompaniment.</p>
 								<p>Even though my career has taken me more into the commercial side of things, I always try to approach my projects the way I was taught at Kenyon. Pushing the limits of the tools I’m given, learning and expanding my skills whenever possible, and making even an internal-only training video interesting and visually engaging.</p>
+								<iframe style="width:40%; height:20em; display: block; margin-left: auto; margin-right: auto; margin-bottom: 25px" src="https://docs.google.com/presentation/d/1bVW2OOrSjRg7zKm8gRdT1K7jwsmho3I_uvtAAhVXGLI/embed?start=true&loop=true&delayms=3500" frameborder="0" width="16em" height="auto" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 							</section>
 
 					</div>
