--- a/legouniverse.html
+++ b/legouniverse.html
@@ -27,11 +27,11 @@
 								<a href="index.html#two" class="goto-next scrolly">projects</a>
 								<ul>
 									<li><a href="starwarsgalaxysedge.html">star<b>wars</b>galaxy's<b>edge</b></a></li>
-									<li><a href="legouniverse.html">lego<b>universe</b></a></li>
+									<li><a href="freelanceandfx.html">freelance<b>/fx</b></a></li>
 									<li><a href="jumpgateevolution.html">jumpgate<b>evolution</b></a></li>
 									<li><a href="rallysoftware.html">rally<b>software</b></a></li>
-									<li><a href="traditionalart.html">traditional<b>art</b></a></li>
-									<li><a href="freelanceandfx.html">freelance<b>/fx</b></a></li>
+									<li><a href="legouniverse.html">lego<b>universe</b></a></li>
+									<li><a href="studentwork.html">student<b>work</b></a></li>
 								</ul>
 							</li>
 							<li><a href="index.html#three" class="goto-next scrolly">about<b>me</b></a></li>
