-Added Google Analytics tags
-Added facivon

--- a/index.html
+++ b/index.html
@@ -6,12 +6,23 @@
 -->
 <html>
 	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-27467958-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-27467958-1');
+		</script>
 		<title>Ryan Baier - Video Artist</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="https://use.typekit.net/gds6oel.css">
+		<link href="images/favicon_192.png" rel="icon" type="image/png" >
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
 	</head>
 	<body class="is-preload landing">
 		<div id="page-wrapper">
