--- a/jumpgateevolution.html
+++ b/jumpgateevolution.html
@@ -78,10 +78,10 @@
 						<!-- Content -->
 							<section id="content" style="margin: 1.5em">
 <!--								<div><a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a><h2 style="position: absolute; top: 50%; left: 50%; text-align: center"></h2></div>-->
-								<p>I went to work for MMORPG developer NetDevil in 2008 and while I was hired primarily to work on LEGO Universe, I always had a soft spot for NetDevil's own IP called Jumpgate: Evolution. Jumpgate: Evolution was an action space-sim that was intended to be a follow-up to Jumpgate: The Reconstruction Initiative, which had been a modest hit for NetDevil.<span class="image left"><iframe src="http://player.vimeo.com/video/572398321?title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe></span> I had grown up playing the X-Wing and TIE Fighter series from LucasArts, so I tried to find whatever time I could to contribute to Jumpgate.</p>
+								<p>I went to work for MMORPG developer NetDevil in 2008 and while I was hired primarily to work on LEGO Universe, I always had a soft spot for NetDevil's own IP called Jumpgate: Evolution. Jumpgate: Evolution was an action space-sim that was intended to be a follow-up to Jumpgate: The Reconstruction Initiative, which had been a modest hit for NetDevil.<span class="image left"><iframe src="https://player.vimeo.com/video/572398321?title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe></span> I had grown up playing the X-Wing and TIE Fighter series from LucasArts, so I tried to find whatever time I could to contribute to Jumpgate.</p>
 								<p>One of the earlier trailers I worked on was a teaser for the "Three Nations" in the game; Solrain, Quantar, and Octavius. Taking some inspiration from the Battlestar Galactica revival, I worked in collaboration with NetDevil Coordinator Grace Wong and the NetDevil audio team to capture, edit, and create motion graphics for the trailer.</p>
-								<span class="image right"><iframe src="http://player.vimeo.com/video/563079824?title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe></span>
-								<p>As the game continued to come together it was decided that pre-rendered cinematics were necessary to introduce the story of the game. We planned to create one for each faction, but didn't have the budget to hire an animation studio to create it. Jumpgate Art Director Darrin Klein asked if I could edit and composite the cinematics while he would provide renders and passes from 3D Studio Max and the NetDevil audio team headed by Richard Dekkard handled the music and voice-over. <span class="image left"><iframe src="http://player.vimeo.com/video/562650494?title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe></span>Unfortunately, Jumpgate was cancelled while we were creating these cinematics, but the most complete were the "Solrain" and "Octavius" ones.</p>			
+								<span class="image right"><iframe src="https://player.vimeo.com/video/563079824?title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe></span>
+								<p>As the game continued to come together it was decided that pre-rendered cinematics were necessary to introduce the story of the game. We planned to create one for each faction, but didn't have the budget to hire an animation studio to create it. Jumpgate Art Director Darrin Klein asked if I could edit and composite the cinematics while he would provide renders and passes from 3D Studio Max and the NetDevil audio team headed by Richard Dekkard handled the music and voice-over. <span class="image left"><iframe src="https://player.vimeo.com/video/562650494?title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe></span>Unfortunately, Jumpgate was cancelled while we were creating these cinematics, but the most complete were the "Solrain" and "Octavius" ones.</p>			
 							  <p>I was so excited to be able to contribute to Jumpgate and I wish that the world could've played the game made by the insanely dedicated and talented Jumpgate team.</p>
 								<p>&nbsp;</p>
                             </section>
@@ -100,7 +100,7 @@
 						<li><a href="mailto:ryan@ryanbaier.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Ryan Baier. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Ryan Baier. All rights reserved.</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
