update links to https

--- a/studentwork.html
+++ b/studentwork.html
@@ -79,13 +79,13 @@
 							<section id="content" style="margin: 1.5em">
 <!--								<div><a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a><h2 style="position: absolute; top: 50%; left: 50%; text-align: center"></h2></div>-->
 								<p>Even though so much of my work is done digitally, at Kenyon College my arts education was traditional art. I still try to exercise this creative muscle by drawing with my kids and going to figure drawing when I can.</p>
-								<span class="image left"><iframe src="http://player.vimeo.com/video/557440831?title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe></span>
+								<span class="image left"><iframe src="https://player.vimeo.com/video/557440831?title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe></span>
 								<p>In addition to my traditional art studies at Kenyon, I studied Video Art under Professor Claudia Esslinger. Video Art was not a form of expression that I had been exposed to, so it was a process to find my way into the medium, and eventually find my voice as a Video Artist. I was all about visual effects and animation, so it came as a shock to find that Video Art was much more about expression and ideas than polish and production, although that didn’t stop me from trying. A piece called ‘Borders’ was my way of getting out of my comfort zone and attempting something that would be foreign to me, mainly composing music and collaborating with dancers Katie Capaldi and Louisa Harding in an empty warehouse in Mount Vernon, Ohio.</p>
-								<span class="image right"><iframe src="http://player.vimeo.com/video/557438096?title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe></span>
+								<span class="image right"><iframe src="https://player.vimeo.com/video/557438096?title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe></span>
 								<p>As of my ten-year reunion I’ve heard that there’s a piece of mine that is still used as an example in Professor Esslinger’s Video Art classes, which is called ‘Bonding’. This was for an assignment where we were instructed to appropriate footage and turn it into a piece of our own. I decided to create my piece as a deconstruction of James Bond, his treatment of women, and the reconciliation of being a Bond fan in the modern age.</p>
-								<span class="image left"><iframe src="http://player.vimeo.com/video/557442499?title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe></span>
+								<span class="image left"><iframe src="https://player.vimeo.com/video/557442499?title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe></span>
 								<p>At Kenyon all senior art majors participate in a senior art show at the end of the school year. My senior show was an interactive Video Art installation where the viewer was invited to play memory games with my childhood home movies, exploring themes of memory and childhood.</p>
-								<span class="image right"><iframe src="http://player.vimeo.com/video/563074345?title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe></span>
+								<span class="image right"><iframe src="https://player.vimeo.com/video/563074345?title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe></span>
 								<p>In June 2006, after graduation, I was given the opportunity to provide a video accompaniment to a new music piece written by composer Andrew Drannon titled ‘Providence’. To create the piece I appropriated and edited public domain assembly line footage into a new media accompaniment.</p>
 								<p>Even though my career has taken me more into the commercial side of things, I always try to approach my projects the way I was taught at Kenyon. Pushing the limits of the tools I’m given, learning and expanding my skills whenever possible, and making even an internal-only training video interesting and visually engaging.</p>
 								<iframe style="width:40%; height:20em; display: block; margin-left: auto; margin-right: auto; margin-bottom: 25px" src="https://docs.google.com/presentation/d/1bVW2OOrSjRg7zKm8gRdT1K7jwsmho3I_uvtAAhVXGLI/embed?start=true&loop=true&delayms=3500" frameborder="0" width="16em" height="auto" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
@@ -105,7 +105,7 @@
 						<li><a href="mailto:ryan@ryanbaier.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Ryan Baier. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Ryan Baier. All rights reserved.</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
