--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 						<li><a href="mailto:ryan@ryanbaier.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Ryan Baier. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Ryan Baier. All rights reserved.</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
