Background and Button Changes
-Updated LEGO Universe background
-Updated Student Work background
-Changed Student Work button parameters

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 										<div class="col-4 col-6-small"><span class="image fit"><a href="jumpgateevolution.html"><img src="images/JGE_BG.png" alt="" /><p>jumpgate<br><b>evolution</b></p></a></span></div>
 										<div class="col-4 col-6-small"><span class="image fit"><a href="rallysoftware.html"><img src="images/Rally_BG.png" alt="" /><p>rally<b>software</b></p></a></span></div>
 										<div class="col-4 col-6-small"><span class="image fit"><a href="legouniverse.html"><img src="images/LU_BG.png" alt="" /><p>lego<b>universe</b></p></a></span></div>
-										<div class="col-4 col-6-small"><span class="image fit"><a href="studentwork.html"><img style="height: 6.15em; object-fit: cover" src="images/TraditionalArt_BG.png" alt="" /><p>student<b>work</b></p></a></span></div>
+										<div class="col-4 col-6-small"><span class="image fit"><a href="studentwork.html"><img src="images/TraditionalArt_BG.png" alt="" /><p>student<b>work</b></p></a></span></div>
 										
 									</div>
 									</div>
