-Created Amazon page
-Added Amazon copy
-Added Amazon background
-Updated Copy on most pages
-Tweaked thumbnail size in project section of index.html
-Tweaked about me copy in index.html

--- a/amazongames.html
+++ b/amazongames.html
@@ -67,11 +67,10 @@
 									</div>
 							</section>-->
 				<section id="one" class="spotlight style1 middle project">
-					<span class="image fit main"><img src="images/SWGE_BG.png" alt="" /></span>
+					<span class="image fit main"><img src="images/AGS_BG.png" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>star<b>wars<br>
-						    galaxy's</b>edge</h2>
+							<h2>amazon<b>games</b></h2>
 						</header>
 					</div>
 					<a href="#content" class="goto-next scrolly">Next</a>
@@ -79,13 +78,11 @@
 				</section>
 						<!-- Content -->
 							<section id="content" style="margin: 1.5em">
-<!--								<div><a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a><h2 style="position: absolute; top: 50%; left: 50%; text-align: center"></h2></div>-->
-								<span class="image left"><img src="images/SWGE_01.png" alt=""/></span>
-								<p>In 2019 I helped craft some of Black Spire Outpost on the world of Batuu at the Galaxy’s Edge theme park in Disneyland and Disney World.  I worked in collaboration with Walt Disney Imagineering and Bolder Games in Boulder, Colorado.  I was involved with several installations for color corrects and tweaks, but my main artistic focuses were the motion graphics and animation for the Droid Repair Station in the Droid Depot, the pricing sign for the Droid Depot, and the menus at Docking Bay 7 Food And Cargo.  For the Droid Repair Station the idea was that a shroud would be mounted in-front of a modern display panel which would segment the panel into three smaller displays.  I gave these videos a CRT look so it would be consistent with the look and feel of Star Wars.  The displays would have diagnostic data and readouts for the two physical animatronic droids in the installation, one an R2 unit and the other a BB unit.</p>
-								<span class="image right"><iframe src="https://player.vimeo.com/video/575108686?autoplay=1&loop=1&muted=1&badge=0&autopause=0&player_id=0&controls=1&app_id=58479" height="9em" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></span>
-								<p> When I started on the project I was given the designs and layouts for the monitors as well as renders of the 3D droids from my former NetDevil and LEGO colleague Erik Beyer.  My first point of order was to make sure that everything I was building in After Effects would be able to be changed and tweaked easily as the project file became more complex.  This included using expressions to be able to quickly alter things like the color palette and nested compositions so I could change positions of the “screens”.  As I started animating the layouts I had to have a lot of blinking lights, scrolling text, and other dynamically moving graphics which I also used expressions for as much as possible as hand animating these would have been a very onerous task.  I’ve played video games since I was little and I still have a few CRT TV’s around the house, so I particularly enjoyed creating the faux CRT effects that were overlaid on top of the motion graphics.</p>
-								<span class="image left"><iframe src="https://player.vimeo.com/video/575119605?title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe></span>
-								<p>After reviews, feedback, and changes I flew out to Disneyland to work on-site with the installations at the under-construction Galaxy’s Edge over the course of a week.  As this was my first project in theme parks I wasn’t really used to having to go through construction training and wearing the proper construction attire while working with clients, but the WDI producers do an amazing job of preparing you and setting you up to succeed.  One stand out memory I have is when I had finished working at the Droid Depot late one night and was walking out of the park.  Maybe the construction crews were between shifts, but for whatever reason there was no one else around except me and the full-size Millenium Falcon, which was as amazing as you’d expect.  Eventually the project wrapped up and as a nice perk I was able to take my son Lucky out to an early preview of the park for his birthday.</p>
+								<p>I went to work at Amazon Games in 2022 with their San Diego team on an unreleased and unannounced game being built in Unreal Engine.  I worked with a lot of immensely talented game industry veterans including the insanely knowledgeable John Smedley of Everquest fame.  My job was to create media for a variety of projects including overviews of the game for leadership and new hires, tech demos, new feature walkthroughs, milestone and sprint recaps, animatics, game comparisons, screenshots, as well as documenting meetings and organizing a media archive.</p>
+								<!--<span class="image right"><iframe src="https://player.vimeo.com/video/575108686?autoplay=1&loop=1&muted=1&badge=0&autopause=0&player_id=0&controls=1&app_id=58479" height="9em" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></span>-->
+								<p>I had a 4K capture setup for recording raw gameplay, but also heavily used the sequencer in Unreal Engine 5 which I love working in.  Sequencer gives you so much flexibility and control over your layout, lighting, and just about everything else in your scene that it’s indispensable as a tool for creating videos in a game engine.  When the engineering team updated our engine from UE4 to UE5 I created a video exclusively in sequencer to get a handle on the updated features of the engine.</p>
+								<!--<span class="image left"><iframe src="https://player.vimeo.com/video/575119605?title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe></span>-->
+								<p>I can sincerely say that the people I worked with at Amazon are an extremely talented, passionate, and experienced group and I’ve enjoyed every minute of getting to work with them.</p>
 							</section>
 
 					</div>
