--- a/freelanceandfx.html
+++ b/freelanceandfx.html
@@ -37,7 +37,8 @@
 							<li>
 								<a href="index.html#two" class="goto-next scrolly">projects</a>
 								<ul>
-									<li><a href="starwarsgalaxysedge.html">star<b>wars</b>galaxy's<b>edge</b></a></li>
+									<li><a href="amazongames.html">amazon<b>games</b></a></li>
+									<li><a href="starwarsgalaxysedge.html">starwars<b>galaxy'sedge</b></a></li>
 									<li><a href="freelanceandfx.html">freelance<b>/fx</b></a></li>
 									<li><a href="jumpgateevolution.html">jumpgate<b>evolution</b></a></li>
 									<li><a href="rallysoftware.html">rally<b>software</b></a></li>
@@ -79,18 +80,18 @@
 							<section id="content" style="margin: 1.5em">
 <!--								<div><a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a><h2 style="position: absolute; top: 50%; left: 50%; text-align: center"></h2></div>-->
 								<span class="image left" style="max-width: 30%"><iframe src="https://player.vimeo.com/video/32436229?title=0&byline=0&portrait=0&controls=1" frameborder="0" allowfullscreen></iframe></span>
-								<p>While I was attending college I spent the summers interning at Quiet Man, which was a visual effects studio in New York City doing commercials, music videos, and TV. After college I was brought on full time as an Inferno and Flame compositor on the night crew. I had the chance to work on tons of different commercials and TV projects, including Saturday Night Live, with a perk of getting to go to the after parties (and after-after parties) on Saturdays.</p>
+								<p>While I was attending college I spent the summers interning at Quiet Man, which was a visual effects studio in New York City doing commercials, music videos, and TV.  After college I was brought on full time as an Inferno and Flame compositor on the night crew.  I worked on tons of different commercials and TV projects, including Saturday Night Live, with a perk of getting to go to the after parties (and after-after parties) on Saturdays.</p>
 								
-								<p>I then moved over to Charlex, which was a larger company and continued working and learning from some amazingly talented compositors and artists. Even after leaving visual effects I still keep my visual effects reel up to date and try to incorporate my effects background into the more general work that I do.</p>
+								<p>I then moved over to Charlex, which was a larger company and continued working and learning from some amazingly talented compositors and artists.  Even after leaving visual effects I still keep my visual effects reel up to date and try to incorporate my effects background into the more general work that I do.</p>
 								
-								<p>On a similar note, the great thing about working in video and motion graphics is being able to work on a project-by-project basis. I've been able to work on some insanely cool and varied projects because of this, and sometimes they have led to full-time jobs, like it did with Rally Software.</p>
+								<p>On a similar note, the great thing about working in video and motion graphics is being able to work on a project-by-project basis.  I've been able to work on some insanely cool and varied projects because of this, and sometimes they have led to full-time jobs, like it did with Rally Software.</p>
 								<span class="image right"><iframe src="https://player.vimeo.com/video/562641843?title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe></span>
-								<p>After LEGO a lot of my colleagues went to work for Backflip Studios, and they got in touch with me to create a launch trailer for their upcoming Ragdoll Blaster 3 game that was coming out on iOS. I met with them, drew up some storyboards, and then dove right in to creating the trailer with elements from the game as well as gameplay captures. This project gave me an opportunity to create some fun motion graphics and use some physics expressions in After Effects. It was a lot of fun, and gave me a chance to start showing off some of my motion graphics skills.</p>
+								<p>After LEGO a lot of my colleagues went to work for Backflip Studios, and they got in touch with me to create a launch trailer for their upcoming Ragdoll Blaster 3 game that was coming out on iOS.  I met with them, drew up some storyboards, and then dove right in to creating the trailer with elements from the game as well as gameplay captures.  This project gave me an opportunity to create some fun motion graphics and use some physics expressions in After Effects.</p>
 								<span class="image left"><iframe src="https://player.vimeo.com/video/557444896?title=0&byline=0&portrait=0" frameborder="0" allowfullscreen></iframe></span>
-								<p>I also had some former co-workers that worked at Sphero, which is a toy and robotics company in Boulder. The great thing about video work is that there are always new skills to add to your tool box, so I took the opportunity to incorporate some of my more infrequently used skills into a video for Sphero including 3D Modeling, Texturing, Lighting, Animation, Sound, and even Music.</p>
+								<p>I also had some former co-workers that worked at Sphero, which is a toy and robotics company in Boulder.  The great thing about video work is that there are always new skills to add to your tool box, so I took the opportunity to incorporate some 3D Modeling, Texturing, Lighting, Animation, Sound, and even Music into this video.</p>
 								<span class="image right"><iframe src="https://player.vimeo.com/video/574311539?autoplay=1&loop=1&muted=1&badge=0&autopause=0&player_id=0&controls=1&app_id=58479" height="9em" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></span>
 								<!--<span class="image right" style="max-width: 30%"><video controls playsinline autoplay muted loop src="images/SWGE_02.mp4" alt=""/></span>-->
-								<p>My freelance opportunities have even brought me to companies like Amazon where I’ve been able to work on internal projects and others intended for their site to help explain features to customers. In this particular video, it was nice not having to worry about a soundtrack or audio and just getting to focus on the visuals and staying on-brand. It was really great getting to work on some fun motion graphics and animation!</p>
+								<p>My freelance opportunities have even brought me to companies like Amazon where I’ve been able to work on internal projects and others intended for their site to help explain features to customers.  In this particular video, it was nice not having to worry about a soundtrack or audio and just getting to focus on the visuals and staying on-brand.</p>
 								<p>If you’d like to hear about another freelance project of mine, I invite you to check out the <a href="starwarsgalaxysedge.html">Star Wars: Galaxy’s Edge</a> project I worked on with Bolder Games and Walt Disney Imagineering.</p>
 
 							</section>
