--- a/studentwork.html
+++ b/studentwork.html
@@ -37,7 +37,8 @@
 							<li>
 								<a href="index.html#two" class="goto-next scrolly">projects</a>
 								<ul>
-									<li><a href="starwarsgalaxysedge.html">star<b>wars</b>galaxy's<b>edge</b></a></li>
+									<li><a href="amazongames.html">amazon<b>games</b></a></li>
+									<li><a href="starwarsgalaxysedge.html">starwars<b>galaxy'sedge</b></a></li>
 									<li><a href="freelanceandfx.html">freelance<b>/fx</b></a></li>
 									<li><a href="jumpgateevolution.html">jumpgate<b>evolution</b></a></li>
 									<li><a href="rallysoftware.html">rally<b>software</b></a></li>
