--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 							<li>
 								<a href="#two" class="goto-next scrolly">projects</a>
 								<ul>
+									<li><a href="amazongames.html">amazon<b>games</b></a></li>
+									<li><a href="pymkitchen.html">pym<b>kitchen</b></a></li>
 <!--									<li><a href="left-sidebar.html">amazon</a></li>-->
 									<li><a href="amazongames.html">amazon<b>games</b></a></li>
 									<li><a href="starwarsgalaxysedge.html">starwars<b>galaxy'sedge</b></a></li>
@@ -45,15 +47,6 @@
 									<li><a href="rallysoftware.html">rally<b>software</b></a></li>
 									<li><a href="legouniverse.html">lego<b>universe</b></a></li>
 									<li><a href="studentwork.html">student<b>work</b></a></li>
-									<!--<li>
-										<a href="#">Projects</a>
-										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
-										</ul>
-									</li>-->
 								</ul>
 							</li>
 							<li><a href="#three" class="goto-next scrolly">about<b>me</b></a></li>
@@ -130,7 +123,8 @@
 										<div class="row gtr-25 gtr-uniform">
 <!--										<div class="col-12"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>-->
 <!--										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/Reel_BG.png" alt="" /><p>amazon</p></span></div>-->
-
+										<div class="col-3 col-6-small"><span class="image fit"><a href="amazongames.html"><img src="images/AGS_BG.png" alt="" /><p>amazon<b>games</b></p></a></span></div>
+										<div class="col-3 col-6-small"><span class="image fit"><a href="pymkitchen.html"><img src="images/PK_BG.png" alt="" /><p>pym<b>kitchen</b></p></a></span></div>
 										<div class="col-3 col-6-small"><span class="image fit"><a href="amazongames.html"><img src="images/AGS_BG.png" alt="" /><p>amazon<b>games</b></p></a></span></div>
 										<div class="col-3 col-6-small"><span class="image fit"><a href="starwarsgalaxysedge.html"><img src="images/SWGE_BG.png" alt="" /><p>starwars<br><b>galaxy'sedge</b></p></a></span></div>
 										<div class="col-3 col-6-small"><span class="image fit"><a href="freelanceandfx.html"><img src="images/FreelanceFX_BG.png" alt="" /><p>freelance<b>/fx</b></p></a></span></div>
