--- a/jumpgateevolution.html
+++ b/jumpgateevolution.html
@@ -38,6 +38,7 @@
 								<a href="index.html#two" class="goto-next scrolly">projects</a>
 								<ul>
 									<li><a href="amazongames.html">amazon<b>games</b></a></li>
+									<li><a href="pymkitchen.html">pym<b>kitchen</b></a></li>
 									<li><a href="starwarsgalaxysedge.html">starwars<b>galaxy'sedge</b></a></li>
 									<li><a href="freelanceandfx.html">freelance<b>/fx</b></a></li>
 									<li><a href="jumpgateevolution.html">jumpgate<b>evolution</b></a></li>
