--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<div class="content">
 						<div class="container">
 							<div class="row">
-								<div class="col-5 col-12-medium">
+								<div class="sections">
 									<header>
 										<h2>ryan<b>baier</b></h2>
 										<p>video and motion graphic artist</p>
@@ -77,22 +77,9 @@
 					<div class="content">
 						<div class="container">
 							<div class="row">
-								<div class="col-5 col-12-medium">
-									<header>
-										<h2>work<br><b>reel</b></h2>
-<!--										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>-->
-									</header>
+								<div class="reel">
+									<iframe style="width: 100vw; height: 100vh; padding-top: 2vw; padding-right: 35vw; padding-left: 20vw; padding-bottom: 2vw;" src="https://player.vimeo.com/video/123284224" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 								</div>
-								<div class="col-7 col-12-medium">
-									<iframe style="width:100%; height:100%" src="https://player.vimeo.com/video/123284224" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-								</div>
-								<!--<div class="col-4 col-12-medium">
-									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-									ipsum dolor nullam.</p>
-								</div>-->
 							</div>
 						</div>
 					</div>
@@ -111,13 +98,13 @@
 					<div class="content">
 						<div class="container">
 							<div class="row">
-									<div class="col-5 col-12-medium">
-									<header>
+									<div class="sections">
+									<header style="/* [disabled]align-content:center; */">
 										<h2>projects</h2>
 <!--										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>-->
 									</header>
 									</div>
-									<div class="col-7 col-12-medium">
+									<div class="projects">
 										<div class="row gtr-25 gtr-uniform">
 <!--										<div class="col-12"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>-->
 <!--										<div class="col-3 col-6-xsmall"><span class="image fit"><img src="images/Reel_BG.png" alt="" /><p>amazon</p></span></div>-->
@@ -145,7 +132,7 @@
 					<div class="content">
 						<div class="container">
 							<div class="row">
-								<div class="col-5 col-12-medium">
+								<div class="sections">
 									<header>
 										<h2>about<br><b>me</b></h2>
 <!--										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>-->
@@ -168,7 +155,7 @@
 				<footer id="footer">
 					<ul class="icons">
 <!--						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>-->
-						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+<!--						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>-->
 						<li><a href="https://www.linkedin.com/in/ryanbaier/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 <!--						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>-->
 <!--						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>-->
