--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<div class="container">
 							<div class="row">
 								<div class="reel">
-									<iframe style="width: 100vw; height: 100vh; padding-top: 2vw; padding-right: 35vw; padding-left: 20vw; padding-bottom: 2vw;" src="https://player.vimeo.com/video/123284224" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+									<iframe src="https://player.vimeo.com/video/123284224" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 								</div>
 							</div>
 						</div>
